<resources>
    <string name="app_name">trabalhoPDM_6160_9710</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookings">Reservas</string>
    <string name="menu_bookings_add">Adicionar Reserva</string>
    <string name="menu_bookings_details">Detalhes da Reserva</string>
    <string name="menu_bookings_update">Atualizar Reserva</string>
    <string name="menu_areas">Áreas</string>
    <string name="menu_clocks">Pontos</string>
</resources>