<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_baseline_bookmarks_24"
            android:title="@string/menu_bookings" />
        <item
            android:id="@+id/nav_areas"
            android:icon="@drawable/ic_baseline_business_24"
            android:title="@string/menu_areas" />
        <item
            android:id="@+id/nav_clocks"
            android:icon="@drawable/ic_baseline_punch_clock_24"
            android:title="@string/menu_clocks" />
    </group>
</menu>